Fix others problems

--- a/templates/index.html
+++ b/templates/index.html
@@ -378,6 +378,27 @@
                                         <input class="form-control" type="file" id="photoFile" name="photo" accept="image/*" required>
                                     </div>
 
+                                    <div class="mb-3">
+                                        <label for="country" class="form-label">Страна</label>
+                                        <input type="text" class="form-control" id="country" name="country">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="rating" class="form-label">Рейтинг</label>
+                                        <input type="text" class="form-control" id="rating" name="rating">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="height" class="form-label">Рост</label>
+                                        <input type="text" class="form-control" id="height" name="height">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="position" class="form-label">Позиция</label>
+                                        <input type="text" class="form-control" id="position" name="position">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="english-name" class="form-label">Fullname</label>
+                                        <input type="text" class="form-control" id="english-name" name="position">
+                                    </div>
+
                                     <button type="button" class="btn btn-warning" id="uploadPhotoButton" onclick="uploadPhoto()">Загрузить фото</button>
                                 </div>
                             </div>
