--- a/static/css/scoreboard.css
+++ b/static/css/scoreboard.css
@@ -150,13 +150,30 @@ body {
     /* color: color(display-p3 1.000 1.000 1.000); */
 }
 
+.setV {
+    position: absolute;
+    width: 43px;
+    height: 43px;
+    top: 0px;
+	right: 58px; /* Справа от основного счета (58px ширина main-score-area) */
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 38px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #FFFFFF;
+	background: linear-gradient(180deg, #5C5C5C 0%, #333333 100%);
+    /* color: color(display-p3 1.000 1.000 1.000); */
+}
+
 .set1-0, .set2-0 { left: 473px; } /* 499px left minus 26px offset */
 .set1-1, .set2-1 { left: 430px; } /* 456px left minus 26px offset */
 .set1-2, .set2-2 { left: 387px; } /* 413px left minus 26px offset */
 
 
 .score-text {
-    /* Позиционирование убрано, т.к. оно внутри .main-score-area (который уже спозиционирован) */
     width: 100%;
     height: 100%;
     font-weight: 700;
